<resources>
    <string name="app_name">Pay &amp; Serve</string>
    <string name="_23jun">23, Jun 2018    16:30</string>
    <string name="trans_amount">Transaction Amount</string>
    <string name="_121">$ 121</string>
    <string name="trans_id">Transaction ID</string>
    <string name="op42323">OP42323</string>
    <string name="trans_description">Transaction Description</string>
    <string name="prcr">PRCR/REL RETAIL LTD/NYC</string>
    <string name="account">Account</string>
    <string name="xxxx">XXXX XXXX XXXX 4312</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="general_settings">General Settings</string>
    <string name="change_app">Change App Lock</string>
    <string name="language">Language</string>
    <string name="selected_lang">Selected language is English</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="sync_on_start">Sync on start</string>
    <string name="allow_app_to">Allow application to sync data every time it start</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="add_money">Add Money</string>
    <string name="main_wallet">Main Wallet</string>
    <string name="wallet">Wallet</string>

    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="dth">DTH</string>
    <string name="electricity_bill">Electricity</string>
    <string name="lpg_gas">LPG GAS</string>
    <string name="landline_bills">Landlines</string>
    <string name="broadband_bills">Broadband</string>
    <string name="water_bills">Water</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="life_insurance">Life Insurance</string>
    <string name="fasttag">FASTag</string>
    <string name="loan">Loan</string>
    <string name="cable_tv">Cable TV</string>
    <string name="education_fees">Education\nFees</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="minciple_taxes">Municipal\nTaxes</string>
    <string name="housing_society">Housing\nSociety</string>
    <string name="general">General</string>
    <string name="rupee">₹</string>
    <string name="transaction_pending">Transaction Pending</string>
    <string name="tran_success">Transaction Successful</string>
    <string name="tran_failed">Transaction Failed</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_report">Share Report</string>
    <string name="no_application">No Application are available in your device to this file content</string>
    <string name="no_report">PDF Files are not available</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_rejected">Rejected</string>
    <string name="transaction">Transaction</string>
    <string name="aeps_report">Aeps Report</string>
    <string name="todo">TODO</string>
    <string name="all_services">All Services</string>
    <string name="aeps">AEPS</string>
    <string name="go_to_wallet_section">Go To Wallet Section</string>
    <string name="matm_balance">MATM Balance</string>
    <string name="aeps_balance">Available Kiosk Balance</string>
    <string name="please_input_a_search_string">Please input a search string</string>
    <string name="please_input_from_and_to_date">Please input from and to date</string>
    <string name="all_reports">All Reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date</string>
    <string name="postpaid">Postpaid</string>
    <string name="matm_fund_request">Card Balance settlement</string>
    <string name="aeps_fun_request">Kiosk Balance settlement</string>
    <string name="forgot_your_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="dmt">DMT</string>
    <string name="text_print">Print</string>
    <string name="text_share">Share</string>
    <string name="text_generated_file_error">Someting went wrong</string>
    <string name="notification">Notification</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="balance">Balance</string>
    <string name="generate_tpin"><u>Generate TPin</u></string>
    <string name="Cid">Hi!</string>

    <string name="CRed">We are ready to help you.</string>

    <string name="COur">Our service hour is</string>

    <string name="COmon">Monday - Saturday (10am - 6pm)</string>

    <string name="Csat"> Sunday\t \t (holiday)</string>

    <string name="CustomareContactName">Name</string>
    <string name="CustomareContatUsNumber">Mobile Number</string>
    <string name="CustomareContactUsEmail">Email (optional)</string>
    <string name="CustomareContactUsMessage">Message</string>
    <string name="ContactSubmitBtn">Submit</string>
    <string name="office_address">IInd Floor Siddiqui Plaza Main Road Anisabad Patna Bihar 800002</string>

    <string-array name="bill_payment_services">
        <item>Mobile</item>
        <item>DTH</item>
        <item>Electricity</item>
        <item>Gas Bill</item>
        <item>Landline</item>
        <item>Broadband</item>
        <item>Water</item>
        <item>Loan Repayment</item>
        <item>Life Insurance</item>
        <item>FASTag</item>
        <item>Loan</item>
        <item>Cable TV</item>
        <item>Health Insurance</item>
        <item>Education Fees</item>
        <item>Municipal Taxes</item>
        <item>Postpaid</item>
        <item>Hosing Society</item>
    </string-array>


    <string-array name="shop_type">
        <item>Shop Type</item>
        <item>Kirana Shop</item>
        <item>Mobile Shop</item>
        <item>Copier Shop</item>
        <item>Other</item>
    </string-array>

    <string-array name="qualification_type">
        <item>Qualification Type</item>
        <item>SSC</item>
        <item>HSC</item>
        <item>Graduate</item>
        <item>Post Graduate</item>
        <item>Diploma</item>
    </string-array>

    <string-array name="population">
        <item>Select Population</item>
        <item>0 to 2000</item>
        <item>2000 to 5000</item>
        <item>5000 to 10000</item>
        <item>10000 to 50000</item>
        <item>50000 to 100000</item>
        <item>100000+</item>
    </string-array>

    <string-array name="location_type">
        <item>Location Type</item>
        <item>Rural</item>
        <item>Urban</item>
        <item>Metro Semi Urban</item>
    </string-array>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="loading_text">Please wait..</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="do_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tag_line"><![CDATA[#Ab Zindagi Hui Aur Bhi Aasaan!\n#Ab Banking Hua Aur Bhi Aasaan!\n# Ab Payments Hua Aur Bhi Aasaan!\n#A Digital & Branchless Banking B2B Platform]]></string>
    <string name="rate_app_title">RATE APP</string>
    <string name="rate_app_message">If you are enjoying our app, please take a moment to rate it on PlayStore. Thanks for your support!</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">REMIND ME LATER</string>
    <string name="rate_btn_nut">NO, THANKS</string>
    <string name="kuber_wallet">Kuber Wallet</string>
    <string name="vcard_no"><u>+91 9717230129</u></string>
    <string name="emal_gmail_com"><u>emal@gmail.com</u></string>

    <!--    <string name="vcard_no"><font text-decoration="underline">+91 9717230129</font> </string>-->

</resources>
