<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewWallet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp"
    android:orientation="vertical"
    android:scrollbars="none"
    app:cardBackgroundColor="@color/white_card"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tvWalletTitleCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgApp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/primary_crolor_cir_stroke"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_wallet"
                    app:tint="@color/img_primary"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/main_wallet"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvMainBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="\u20B9 23456.00"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvKuberWalletCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:layout_toEndOf="@id/divider2"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgKuberApp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/primary_crolor_cir_stroke"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_wallet"
                    app:tint="@color/img_primary"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/kuberWalletTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/kuber_wallet"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvKuberBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="\u20B9 23456.00"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>


        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvWalletTitleCon"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/divider" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="@dimen/_47sdp"
            android:layout_below="@id/tvWalletTitleCon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/secAepsWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/aeps_balance"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvAepsBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="\u20B9 650.00"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secMatm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/divider2"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/matm_balance"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvMatmBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="\u20B9 1356.00"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/walletSecCon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_below="@id/divider2"
            android:background="@drawable/wallet_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWalletSec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/go_to_wallet_section"
                android:textColor="@color/textWhite"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/right_arrow" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/shimmer"
            android:layout_above="@id/walletSecCon"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/white_card" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/gray_corner_bg" />

            </com.facebook.shimmer.ShimmerFrameLayout>
        </RelativeLayout>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>